--- a/app/assets/stylesheets/decidim/modules/_typography.scss
+++ b/app/assets/stylesheets/decidim/modules/_typography.scss
@@ -90,6 +90,7 @@ button{
   &:focus{
     outline: $button-outline-focus;
     // outline-color: var(--highlight);
+    outline-offset: $button-outline-offset;
   }
 }
 
