--- a/app/assets/stylesheets/decidim/utils/_settings.scss
+++ b/app/assets/stylesheets/decidim/utils/_settings.scss
@@ -110,6 +110,7 @@ $border: $border-width solid $light-gray !default;
 
 @include add-foundation-colors;
 $highlight-color: $highlight;
+$input-highlight-color: $highlight-alternative;
 
 // 2. Breakpoints
 // --------------
@@ -477,9 +478,10 @@ $input-background: $white;
 $input-background-focus: $white;
 $input-background-disabled: $light-gray;
 $input-border: 2px solid $black;
-$input-border-focus: 2px solid map-get($foundation-palette, primary);
+$input-border-focus: 2px solid $input-highlight-color;
 $input-outline: 0;
 $input-outline-focus: none;
+$input-radiocheck-outline-focus: $input-border-focus;
 $input-outline-offset: 2px;
 $input-padding: $form-spacing / 2;
 $input-shadow: inset 0 1px 2px rgba($black, .1);
